# game_rs

./: Cargo.toml  index.html  start.bat  start.sh
docs/: game.js  game.wasm
hole_vec/: Cargo.toml
hole_vec/src/: lib.rs
src/: entry_desktop.rs  entry_web.rs  game.rs  main.rs
src/backend/: mod.rs  web_backend.rs  window_backend.rs
src/entity/: entities.rs  exec.rs  item.rs  job.rs  scheduler.rs  worker.rs
src/game/interface/: key.rs  mod.rs  mouse.rs
src/game/world/: dir.rs  grid.rs  material.rs  mod.rs  pos.rs
src/ui/: button.rs  clickable.rs  key.rs  menu.rs  mod.rs  mouse.rs
src/world/: dir.rs  exec.rs  grid.rs  job.rs  machine.rs  material.rs  mod.rs  pos.rs  scheduler.rs  worker.rs  wrapper.rs
static/: assets.xcf  index.html
