[package]
name = "game"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.17"
base64 = "0.10.1"
rand = { version = "0.6.5", features = ["stdweb"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sfml = { version = "0.14.0", features = ["window", "graphics"] }
rand = "0.6.5"

[dependencies.hierarchical_pathfinding]
path = "../hierarchical_pathfinding"

# only for cargo check and rls
[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2.43"
